--- a/about.html
+++ b/about.html
@@ -276,17 +276,21 @@
     </section>
 
     <footer>
-        <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
-        </div>
-        <div class="copyright">
-            &copy; 2026 GamezPlanet. All rights reserved.
-        </div>
-    </footer>
+    <div class="footer-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+        <a href="data-deletion.html">Data Deletion</a>
+    </div>
+    <div class="copyright">
+        <p>&copy; 2026 GamezPlanet. All rights reserved.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.9em; opacity: 0.8;">
+            Operated by Royal Planet Contest Place | Registration No. 3719479
+        </p>
+    </div>
+</footer>
 
     <script>
         // Mobile menu toggle
